--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.17.8",
     "@types/node": "^14.14.9",
     "@types/redis": "^2.8.28",
+    "@types/uuid": "^8.3.0",
     "class-validator": "^0.12.2",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
@@ -49,11 +51,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
-    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.1"
   },
   "mikro-orm": {
     "useTsNode": true,
