--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start2": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "create:migration": "mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -37,10 +36,6 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.3.1",
-    "@mikro-orm/core": "^4.3.1",
-    "@mikro-orm/migrations": "^4.3.1",
-    "@mikro-orm/postgresql": "^4.3.1",
     "@types/dotenv": "^8.2.0",
     "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.19.0",
