--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,14 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@urql/exchange-graphcache": "^3.2.0",
+    "emotion-theming": "^11.0.0",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
