--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "graphql": "^15.4.0",
     "init": "^0.1.2",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "latest",
+    "next": "^10.0.3",
     "next-urql": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
