--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
+    "unixify": "^1.0.0",
     "urql": "^1.11.3"
   },
   "license": "MIT",
