--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "init": "^0.1.2",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.3",
