--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "Trying out new tech:",
   "main": "index.js",
   "scripts": {
+    "gen-env": "npx gen-env-types .env -o src/env.d.ts -e .",
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
@@ -44,8 +46,10 @@
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "gen-env-types": "^1.0.4",
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
