--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.1",
@@ -23,6 +24,7 @@
     "init": "^0.1.2",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.3",
+    "next-apollo": "^5.0.4",
     "next-urql": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -35,6 +37,7 @@
     "@graphql-codegen/cli": "1.19.2",
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-operations": "1.17.10",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.14.9",
     "typescript": "^4.1.2"
