--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -21,7 +21,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/utils/createWithApollo.js"
   ],
   "exclude": [
     "node_modules"
